--- a/Dockerfile.j2
+++ b/Dockerfile.j2
@@ -51,7 +51,6 @@ RUN     cd /src                                                                 
 
 # Configure Elasticsearch
 ADD     ./elasticsearch/run /usr/local/bin/run_elasticsearch
-RUN     chown -R elasticsearch:elasticsearch /var/lib/elasticsearch
 RUN     mkdir -p /tmp/elasticsearch && chown elasticsearch:elasticsearch /tmp/elasticsearch
 
 # Confiure StatsD
@@ -63,14 +62,9 @@ ADD     ./graphite/local_settings.py /var/lib/graphite/webapp/graphite/local_set
 ADD     ./graphite/carbon.conf /var/lib/graphite/conf/carbon.conf
 ADD     ./graphite/storage-schemas.conf /var/lib/graphite/conf/storage-schemas.conf
 ADD     ./graphite/storage-aggregation.conf /var/lib/graphite/conf/storage-aggregation.conf
-RUN     mkdir -p /var/lib/graphite/storage/whisper
-RUN     touch /var/lib/graphite/storage/graphite.db /var/lib/graphite/storage/index
-RUN     chown -R www-data /var/lib/graphite/storage
-RUN     chmod 0775 /var/lib/graphite/storage /var/lib/graphite/storage/whisper
-RUN     chmod 0664 /var/lib/graphite/storage/graphite.db
-RUN     cd /var/lib/graphite/webapp/graphite && python manage.py syncdb --noinput
 
-VOLUME /var/lib/graphite/storage
+# VOLUME /var/lib/graphite/storage
+# VOLUME /var/lib/elasticsearch
 
 # Configure Grafana
 ADD     ./grafana/config.js /src/grafana/config.js
@@ -78,6 +72,9 @@ ADD     ./grafana/config.js /src/grafana/config.js
 # Configure nginx and supervisord
 ADD     ./nginx/nginx.conf /etc/nginx/nginx.conf
 ADD     ./supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+
+ADD     run.sh /run.sh
+RUN     chmod +x /run.sh
 
 # ---------------- #
 #   Expose Ports   #
@@ -100,5 +97,4 @@ EXPOSE  8126
 # -------- #
 #   Run!   #
 # -------- #
-
-CMD     ["/usr/bin/supervisord", "-n"]
+CMD     /run.sh
